tests/codegen/errors/reader/reader/numeric.periodic.empty-block/atom.menu.error.reader.numeric.periodic.empty-block.005/menu-reader-numeric.periodic.empty-block-005.mon
;; TEST-ID: tests.codegen.menu.errors.reader.numeric.periodic.empty.block.005
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: reader/numeric.periodic.empty-block
;; TEST-MENU: errors/reader/numeric.periodic.empty-block/atom.menu.error.reader.numeric.periodic.empty-block.005
;; TEST-MENU-PATH: codegen/errors/reader/numeric.periodic.empty-block/atom.menu.error.reader.numeric.periodic.empty-block.005
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin reader.c diagnostic: Periodic decimal repeating block cannot be empty
;; TEST-ATOM: atom.menu.error.reader.numeric.periodic.empty-block.005
;; TEST-CODEGEN-ATOM: atom.menu.error.reader.numeric.periodic.empty-block.005
;; TEST-ATOM-LEAF: atom.menu.error.reader.numeric.periodic.empty-block.005
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: reader
;; TEST-ERROR-FAMILY: numeric.periodic.empty-block
;; TEST-ERROR-MESSAGE: Periodic decimal repeating block cannot be empty
;; TEST-ERROR-SOURCE: reader.c
;; TEST-ERROR-PATH: reader.c:1604
;; TEST-CODEGEN-PATH: diagnostic.reader.numeric.periodic.empty-block
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-TAG: menu
;; TEST-COVERAGE: reader.c:1604 Periodic decimal repeating block cannot be empty
;; TEST-USES-ATOM: atom.menu.error.reader.numeric.periodic.empty-block.005
;; TEST-USES-ATOM: atom.error.reader
;; TEST-USES-ATOM: atom.error.reader.numeric.periodic.empty-block
;; TEST-USES-ATOM: atom.reader.error
;; TEST-DEPENDS-ON: atom.reader.lex.parse
;; TEST-REFINES: atom.error.reader
;; TEST-REFINES: atom.error.reader.numeric.periodic.empty-block
;; TEST-REFINES: atom.reader.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors reader reader

(module Main)
(show 12.5()
